PDF保存はできるようになった。 若干黒い線が見えるような気もしなくもないが、用紙サイズに合わせて印刷すれば問題ない。 SVGはmmに合わせて2100px X 2970pxにした。 CSSで縦がなぜか295mmになっているので、heightをautoにして対応してみた。（これのせいで黒線が入る可能性がある）

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   screenshot: ^3.0.0
   share_plus: ^10.0.2
   path_provider: ^2.1.4
+  html_to_pdf: ^0.8.1
+  html_unescape: ^2.0.0
 
 dev_dependencies:
   flutter_test:
